test/analyzer/input_programs/invalid_programs/program10.tea
a := 1
b := -1.2

# all fine and dandy here
-5
-a
-b

# not okay since the operand must be int/float
-true